--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
- 
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Wrapped by CSI VIT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous"> -->
     <script src="main.js"></script>
 </head>
- 
+
 <body>
     <!-- Background Waves with person svg -->
         <?xml version="1.0" encoding="utf-8"?>
@@ -308,7 +308,7 @@
             </form>
             <p id="below-submit">Wrapped in a mail by CSI VIT, sent 2x a month.<br>You can unsubscribe anytime - obviously.</p>
         </div>
-       
+
     </div>
     <img src="peoplewithvr.png" alt="peoplewithvr.png"  id="people-illustration">
     <div class="launch-giveaway clearfix">
@@ -332,7 +332,7 @@
             </ol>
         </p>
     </div>
- 
+
     <div class="about-csi">
         <h2>ABOUT CSI VIT:</h2>
         <p>At CSI-VIT, skilled designers, developers and tech enthusiasts work together to present a variety of solutions, services
@@ -362,5 +362,5 @@
         </div>
     </div>
 </body>
- 
+
 </html>
