added mobile version

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+	<div class="desktop">
     <!-- Background Waves with person svg -->
         <?xml version="1.0" encoding="utf-8"?>
         <!-- Generator: Adobe Illustrator 22.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -358,9 +359,90 @@
         <div style="text-align: center;" class="chapter-and-more" >
             <img src="csi_logo.png" alt="csi_logo.png" style="width:33%; height: auto;" >
             <br>
-            A chapter and much more.
+
         </div>
-    </div>
+	</div>
+</div>
+
+
+<!-- MOBILE VERSION  -->
+
+<div class="small_screen">
+
+	<img src="mobile_illustration.png" alt="Image" height="" width="100%">
+
+<div class="wrap" style="width: auto;">
+		<h1>Wrapped by CSI VIT</h1>
+		<p>A fortnightly newsletter crafted exclusively for students and the tech community. Subscribe and enter the exclusive launch giveaway.</p>
+	<div class="form">
+		<form action="#" method="post" target="blank">
+			<input type="text" name="name" placeholder="Your Name" id="name"><br>
+			<input type="text" name="email" placeholder="Email Address" id="email"><br>
+			<button class="btn">SUBSCRIBE &amp; ENTER GIVEAWAY</button>
+		</form>
+		<p id="below-submit">Wrapped in a mail by CSI VIT, sent 2x a month.<br>You can unsubscribe anytime - obviously.</p>
+	</div>
+
+<br><hr size="1">
+
+	<h1>Launch Giveaway</h1>
+	<p>A chance to grab a VR Headset for people who subscibe before 5th August, 2018 (11:59 pm).</p>
+
+		<div class="image"><img src="peoplewithvr.png" alt="men_in_vr" width="200vw" height="auto"></div>
+
+	<div>
+		<p style="text-align: left;"><b>To be eligible:</b></p>
+		<ol>
+		<li> Subscribe to our newsletter.</li>
+		<li> Follow us on Facebook.</li>
+		</ol>
+	</div>
+	<div>
+		<p style="text-align: left;"><b>Giveaway Rules:</b></p>
+		<ol>
+		<li> The first 500 subscribers of "This Week by CSI" will be eligible for the give-away.</li>
+		<li> CSI core memebrs are not eligible to participate.</li>
+		<li> Winners will be chosen at random(from the first 500 subscribers).</li>
+		<li> All rights to choose winners are held solely by CSI-VIT. Their decision will be considered final.</li>
+		<li> Winners will be announced on our social media handles, so please make sure you follow us on fb, insta, etc></li>
+		</ol>
+	</div>
+
+<br><hr size="1">
+
+	<h1>About CSI VIT</h1>
+	<p>Computer Society of India is a community of youngsters passionate about technology and its potential to revolutionize the world as we see it. We have organized several events like Laser Tag, Under The Hood, Send Codes and the largest student organised conference in South India, Devspace, the common aim of all of which was to bring together people and innovate solutions to real world issues.</p>
+</div>
+
+<br><hr size="1" class="small-hr"><br>
+
+	<table align="center">
+		<tr>
+			<td><a href="#"><img src="images/FB.png" alt="fblogo" width="30vw" height="30vw" class="logos"></a></td>
+			<td valign="middle"><a href="#">@csivitu</a></td>
+		</tr>
+		<tr>
+			<td><a href="#"><img src="images/twitter-black-shape.png" alt="twitterlogo" width="30vw" height="30vw" class="logos"></a></td>
+			<td><a href="#">@csivitu</a></td>
+		</tr>
+		<tr>
+			<td><a href="#"><img src="images/instagram.png" alt="instalogo" width="30vw" height="30vw" class="logos"></a></td>
+			<td><a href="#">@csivitu</a></td>
+		</tr>
+		<tr>
+			<td><a href="#"><img src="images/github-logo.png" alt="gthublogo" width="30vw" height="30vw" class="logos"></a></td>
+			<td><a href="#">@csivitu</a></td>
+		</tr>
+	</table>
+<div class="image" style="padding: 10vw 0 0 0;">
+	<a href="https://csivit.com">
+	<img src="csi_logo.png" alt="csilogo" width="150vw" height="auto"></a>
+	<br>
+	<br>
+</div>
+
+
+</div>
 </body>
 
 </html>
