Added Social Media Icons

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Wrapped by CSI VIT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous"> -->
-    <script src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
 
 <body>
@@ -329,7 +328,7 @@
                 <li>CSI core members are not eligible to participate.</li>
                 <li>Winners will be chosen at random (from the first 500 subscribers).</li>
                 <li>All rights to choose winners are held solely by CSI-VIT. Their decision will be considered final.</li>
-                <li>Winners will be announced on our social media handles, so please make sure you follow us on </li>
+                <li>Winners will be announced on our social media handles, so please make sure you follow us on fb, insta, etc. </li>
             </ol>
         </p>
     </div>
@@ -342,18 +341,24 @@
             answers to mind-bending problems in addition to having an element of entertainment. </p>
 
         <div style="text-align: center; margin-top: 15%;" >
-            <p class="social" >
-                <i class="fab fa-facebook-square fa-2x"></i>
-                <span class="ala">@csivitu</span>
-            </p>
-            <p class="social" >
-                <i class="fab fa-twitter fa-2x"></i>
-                <span class="ala">@csivitu</span>
-            </p>
-            <p class="social" >
-                <i class="fab fa-instagram fa-2x"></i>
-                <span class="ala">@csivitu</span>
-            </p>
+				<p class="social" >
+						<a href="https://www.facebook.com/csivitu" target="_blank">
+							<i class="fab fa-facebook fa-2x"></i>
+							<span class="ala">@csivitu</span>
+						</a>
+					</p>
+					<p class="social" >
+						<a href="https://twitter.com/csivitu" target="_blank">
+							<i class="fab fa-twitter fa-2x"></i>
+							<span class="ala">@csivitu</span>
+						</a>
+					</p>
+					<p class="social" >
+						<a href="https://www.instagram.com/csivitu/" target="_blank">
+							<i class="fab fa-instagram fa-2x"></i>
+							<span class="ala">@csivitu</span>
+						</a>
+					</p>
         </div>
 
         <div style="text-align: center;" class="chapter-and-more" >
@@ -404,7 +409,7 @@
 		<li> CSI core memebrs are not eligible to participate.</li>
 		<li> Winners will be chosen at random(from the first 500 subscribers).</li>
 		<li> All rights to choose winners are held solely by CSI-VIT. Their decision will be considered final.</li>
-		<li> Winners will be announced on our social media handles, so please make sure you follow us on fb, insta, etc></li>
+		<li> Winners will be announced on our social media handles, so please make sure you follow us on fb, insta, etc.</li>
 		</ol>
 	</div>
 
@@ -416,32 +421,32 @@
 
 <br><hr size="1" class="small-hr"><br>
 
-	<table align="center">
-		<tr>
-			<td><a href="#"><img src="images/FB.png" alt="fblogo" width="30vw" height="30vw" class="logos"></a></td>
-			<td valign="middle"><a href="#">@csivitu</a></td>
-		</tr>
-		<tr>
-			<td><a href="#"><img src="images/twitter-black-shape.png" alt="twitterlogo" width="30vw" height="30vw" class="logos"></a></td>
-			<td><a href="#">@csivitu</a></td>
-		</tr>
-		<tr>
-			<td><a href="#"><img src="images/instagram.png" alt="instalogo" width="30vw" height="30vw" class="logos"></a></td>
-			<td><a href="#">@csivitu</a></td>
-		</tr>
-		<tr>
-			<td><a href="#"><img src="images/github-logo.png" alt="gthublogo" width="30vw" height="30vw" class="logos"></a></td>
-			<td><a href="#">@csivitu</a></td>
-		</tr>
-	</table>
+<div style="text-align: center; margin-top: 5%; margin-left: 7vw;" id="small">
+		<p class="social" >
+			<a href="https://www.facebook.com/csivitu" target="_blank">
+				<i class="fab fa-facebook fa-2x"></i>
+				<span class="ala">@csivitu</span>
+			</a>
+		</p>
+		<p class="social" >
+			<a href="https://twitter.com/csivitu" target="_blank">
+				<i class="fab fa-twitter fa-2x"></i>
+				<span class="ala">@csivitu</span>
+			</a>
+		</p>
+		<p class="social" >
+			<a href="https://www.instagram.com/csivitu/" target="_blank">
+				<i class="fab fa-instagram fa-2x"></i>
+				<span class="ala">@csivitu</span>
+			</a>
+		</p>
+	</div>
 <div class="image" style="padding: 10vw 0 0 0;">
 	<a href="https://csivit.com">
 	<img src="csi_logo.png" alt="csilogo" width="150vw" height="auto"></a>
 	<br>
 	<br>
 </div>
-
-
 </div>
 </body>
 
