Changed CSI Logos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+	<link rel="icon" type="image/png" href="csi_logo.png" sizes="16x16">
 </head>
 
 <body>
@@ -298,9 +299,7 @@
     <div class="main">
         <div class="main-content">
             <h1>Wrapped by CSI VIT</h1>
-            <p>This Week is a newsletter tailor-made for students and the tech community. Subscribe and enter the contest for
-                launch giveaway.
-            </p>
+            <p>A fortnightly newsletter crafted exclusively for students and the tech community. Subscribe and enter the exclusive launch giveaway.</p>
             <form action="#" method="POST" class="input-container" >
                 <input type="text" name="name" id="name-field" class="input-field" placeholder="Your name">
                 <input type="text" name="email" id="email-field" class="input-field" placeholder="Email Address">
@@ -324,11 +323,11 @@
         <h3>Giveaway rules:</h3>
         <p>
             <ol>
-                <li>The first 500 subscribers of "This Week by CSI" will be eligible for the give-away.</li>
+                <li>The first 500 subscribers of "Wrapped by CSI" will be eligible for the give-away.</li>
                 <li>CSI core members are not eligible to participate.</li>
                 <li>Winners will be chosen at random (from the first 500 subscribers).</li>
                 <li>All rights to choose winners are held solely by CSI-VIT. Their decision will be considered final.</li>
-                <li>Winners will be announced on our social media handles, so please make sure you follow us on fb, insta, etc. </li>
+                <li>Winners will be announced on our social media handles, so please make sure you follow us on <a href="https://www.facebook.com/csivitu" target="_blank">Facebook</a>, <a href="https://twitter.com/csivitu" target="_blank">Twitter</a>, <a href="https://www.instagram.com/csivitu/" target="_blank">Instagram</a>.</li>
             </ol>
         </p>
     </div>
@@ -362,7 +361,9 @@
         </div>
 
         <div style="text-align: center;" class="chapter-and-more" >
-            <img src="csi_logo.png" alt="csi_logo.png" style="width:33%; height: auto;" >
+			<a href="https://csivit.com" target="_blank">
+			<img src="CSI_not university_Lt.png" alt="csi_logo.png" style="width:73%; height: auto;" >
+			</a>
             <br>
 
         </div>
@@ -391,7 +392,7 @@
 <br><hr size="1">
 
 	<h1>Launch Giveaway</h1>
-	<p>A chance to grab a VR Headset for people who subscibe before 5th August, 2018 (11:59 pm).</p>
+	<p>A chance to grab a VR Headset for people who subscibe before 5<sup>th</sup> August, 2018 (11:59 pm).</p>
 
 		<div class="image"><img src="peoplewithvr.png" alt="men_in_vr" width="200vw" height="auto"></div>
 
@@ -399,24 +400,27 @@
 		<p style="text-align: left;"><b>To be eligible:</b></p>
 		<ol>
 		<li> Subscribe to our newsletter.</li>
-		<li> Follow us on Facebook.</li>
+		<li> Follow our social media pages. (links below)</li>
 		</ol>
 	</div>
-	<div>
+	<div id="mobiletext">
 		<p style="text-align: left;"><b>Giveaway Rules:</b></p>
 		<ol>
-		<li> The first 500 subscribers of "This Week by CSI" will be eligible for the give-away.</li>
+		<li> The first 500 subscribers of "Wrapped by CSI" will be eligible for the give-away.</li>
 		<li> CSI core memebrs are not eligible to participate.</li>
-		<li> Winners will be chosen at random(from the first 500 subscribers).</li>
+		<li> Winners will be chosen at random (from the first 500 subscribers).</li>
 		<li> All rights to choose winners are held solely by CSI-VIT. Their decision will be considered final.</li>
-		<li> Winners will be announced on our social media handles, so please make sure you follow us on fb, insta, etc.</li>
+		<li> Winners will be announced on our social media handles, so please make sure you follow us on <a href="https://www.facebook.com/csivitu" target="_blank">Facebook</a>, <a href="https://twitter.com/csivitu" target="_blank">Twitter</a>, <a href="https://www.instagram.com/csivitu/" target="_blank">Instagram</a>.</li>
 		</ol>
 	</div>
 
 <br><hr size="1">
 
 	<h1>About CSI VIT</h1>
-	<p>Computer Society of India is a community of youngsters passionate about technology and its potential to revolutionize the world as we see it. We have organized several events like Laser Tag, Under The Hood, Send Codes and the largest student organised conference in South India, Devspace, the common aim of all of which was to bring together people and innovate solutions to real world issues.</p>
+	<p>At CSI-VIT, skilled designers, developers and tech enthusiasts work together to present a variety of solutions, services
+		and products. As a student chapter, CSI has organized several events like Laser Tag, Under The Hood, Send Codez
+		and the largest student organised conference in South India, Devspace, all of which have led to great ideas and
+		answers to mind-bending problems in addition to having an element of entertainment. </p>
 </div>
 
 <br><hr size="1" class="small-hr"><br>
@@ -441,11 +445,10 @@
 			</a>
 		</p>
 	</div>
-<div class="image" style="padding: 10vw 0 0 0;">
-	<a href="https://csivit.com">
-	<img src="csi_logo.png" alt="csilogo" width="150vw" height="auto"></a>
-	<br>
-	<br>
+<div class="image" style="margin-top: 6vh;">
+	<a href="https://csivit.com" target="_blank">
+		<img src="CSI_not university_Dk.png" alt="csilogo" width="250vw" height="auto">
+	</a>
 </div>
 </div>
 </body>
